<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="3dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/background_with_shadow">
    <LinearLayout
        android:id="@+id/headline"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:paddingTop="10dp"
            android:id="@+id/foto_news"
            android:layout_width="325dp"
            android:layout_height="170dp"
            android:src="@drawable/news1"
            android:contentDescription="@string/todo"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_below="@id/headline"
        android:orientation="vertical">
        <TextView
            android:id="@+id/judul_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            tools:text="@string/judul"/>
        <TextView
            android:id="@+id/author_news"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/author"
            android:gravity="center"/>
        <TextView
            android:id="@+id/des_news"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:maxLines="4"
            android:textSize="12sp"
            tools:text="@string/deskripsi"
            android:padding="10dp"
            android:fontFamily="sans-serif-condensed-medium"
            />
    </LinearLayout>
    </LinearLayout>
</RelativeLayout>